Fix onClick not firing on safari mobile

--- a/components/faq/FaqComponent.module.css
+++ b/components/faq/FaqComponent.module.css
@@ -11,6 +11,4 @@
   color: #1f1f30;
   font-size: 16px;
   font-weight: 600;
-
-  cursor: pointer;
 }
